@@ -24,6 +24,7 @@ python-reahl (4.0.0a1) unstable; urgency=low
  * Changed ColumnLayout to be able to take more options per column beyond size only.
  * Changed the way one specifies offsets for columns - to be part of the ColumnOption and not part of ResponsiveSize.
  * Added support for not showing gutters between ColumnLayout columns.
+ * Added support for alignment and justification of ColumnLayout columns.
 
  -- Iwan Vosloo <iwan@reahl.org>  Thu, 12 Jun 2016 08:47:00 +0200
 
